# dot-man

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  config.toml  coverage.json  index.html  install.sh  mkdocs.yml  pro-mgr.toml  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
commands/: index.html
commands/audit/: index.html
commands/bootstrap/: index.html
commands/config/: index.html
commands/doctor/: index.html
commands/navigate/: index.html
commands/other/: index.html
commands/save/: index.html
commands/status/: index.html
commands/vault/: index.html
concepts/branches/: index.html
concepts/conditionals/: index.html
concepts/deploy/: index.html
concepts/hooks/: index.html
concepts/secrets/: index.html
concepts/templates/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: API_STABILITY.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE_MANUAL.md  PRIORITY_PLAN.md  index.md  roadmap.md
docs/commands/: audit.md  bootstrap.md  config.md  doctor.md  index.md  navigate.md  other.md  save.md  status.md  vault.md
docs/concepts/: branches.md  conditionals.md  deploy.md  hooks.md  secrets.md  templates.md
docs/development/: architecture.md  contributing.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/modules/: cli_system.md  core_system.md
docs/review/: improvements.md
docs/specs/: commands.md  security.md
dot_man/: __init__.py  backups.py  branch_ops.py  cli.py  config.py  config_detector.py  constants.py  core.py  dotman_config.py  encryption.py  exceptions.py  files.py  global_config.py  hooks.py  interactive.py  lock.py  merge.py  operations.py  save_deploy_ops.py  secrets.py  section.py  status_ops.py  tui.py  tui_editor.py  tui_log.py  ui.py  utils.py  vault.py
dot_man/cli/: __init__.py  add_cmd.py  audit_cmd.py  backup_cmd.py  bootstrap_cmd.py  branch_cmd.py  clean_cmd.py  common.py  completions.py  completions_cmd.py  config_cmd.py  config_tutorial.py  deploy_cmd.py  discover_cmd.py  doctor_cmd.py  edit_cmd.py  encrypt_cmd.py  export_cmd.py  hooks_cmd.py  import_cmd.py  init_cmd.py  interface.py  log_cmd.py  main.py  navigate_cmd.py  navigate_preview.py  onboarding.py  profile_cmd.py  remote_cmd.py  restore_cmd.py  revert_cmd.py  rollback_cmd.py  save_cmd.py  show_cmd.py  status_cmd.py  switch_cmd.py  tag_cmd.py  template_cmd.py  tui_cmd.py  vault_cmd.py  (+2 more)
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: path-setup.sh  utils.sh
scripts/completions/: _dot-man.zsh  dot-man.bash  dot-man.fish  install.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/commands/: index.html
site/commands/audit/: index.html
site/commands/bootstrap/: index.html
site/commands/config/: index.html
site/commands/doctor/: index.html
site/commands/navigate/: index.html
site/commands/other/: index.html
site/commands/save/: index.html
site/commands/status/: index.html
site/commands/vault/: index.html
site/concepts/branches/: index.html
site/concepts/conditionals/: index.html
site/concepts/deploy/: index.html
site/concepts/hooks/: index.html
site/concepts/secrets/: index.html
site/concepts/templates/: index.html
site/development/architecture/: index.html
site/development/contributing/: index.html
site/getting-started/configuration/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
tests/: conftest.py  test_add_cmd.py  test_audit_cmd.py  test_backup_cmd.py  test_backups.py  test_branch_cmd.py  test_branch_ops.py  test_clean.py  test_cli_commands.py  test_cli_extra.py  test_cli_help.py  test_cli_revert.py  test_cli_v1.py  test_common_v1.py  test_completion.py  test_completions_cmd.py  test_comprehensive.py  test_config.py  test_config_cmd.py  test_config_cmd_v1.py  test_config_ops_v1.py  test_config_preservation.py  test_config_section.py  test_core.py  test_core_extended.py  test_core_v1.py  test_custom_secrets.py  test_deploy_cmd.py  test_discover_cmd.py  test_doctor_cmd.py  test_dotman_config.py  test_edit_cmd.py  test_encrypt_cmd.py  test_encryption.py  test_exceptions.py  test_export_cmd.py  test_files_atomic.py  test_files_comprehensive.py  test_files_extended.py  test_final_push.py  (+52 more)
